# task

./: README.md
task1/opencv_video/: CMakeLists.txt  main.cpp
task1/opencv_video/LightDescriptor/: CMakeLists.txt  LightDescriptor.cpp
task1/opencv_video/LightDescriptor/include/: LightDescriptor.h
task1/opencv_video/class/: config.yml
task1/opencv_video/class/Armor/: ArmorDector.cpp  CMakeLists.txt
task1/opencv_video/class/Armor/include/: Armor.h  General.h  extended.h  rm.h
task1/opencv_video/class/ImgProdCons/: CMakeLists.txt  ImgProdCons.cpp
task1/opencv_video/class/ImgProdCons/include/: ImgProdCons.h
task1/opencv_video/class/LightDescriptor/: LightDescriptor.cpp
task1/opencv_video/class/LightDescriptor/include/: LightDescriptor.h
task4/pcl_viewer/: CMakeLists.txt  main.cpp
task4/pcl_viewer/normal/: CMakeLists.txt  normal.cpp
task4/pcl_viewer/ransac/: CMakeLists.txt
task5/RVIZ/AngleSolver/: AngleSolver.cpp
task5/RVIZ/AngleSolver/include/: AngleSolver.h  CMakeLists.txt  General.h
task5/RVIZ/rviz/: rviz.cpp  rviz_marker.cpp
task5/RVIZ/rviz/include/: rviz.h
task5/melodic/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
task5/melodic/include/image_view/: ImageViewConfig.h
task5/melodic/include/laser_filters/: SpeckleFilterConfig.h
task5/melodic/include/pcl_ros/: MLSConfig.h
task5/melodic/include/stereo_image_proc/: DisparityConfig.h
task5/melodic/lib/actionlib_tutorials/: averaging_client  (+3 more)
task5/video/: -home-elena-桌面-task_five-RVIZ-AngleSolver-.txt
task6/: train.py  一点理解.odt
(+274 files in other folders)
